--- a/config/scheduler_config.json
+++ b/config/scheduler_config.json
@@ -1,7 +1,7 @@
 {
   "scheduler": {
     "max_retries": 3,
-    "delay_between_tasks": 30,
+    "delay_between_tasks": 60,
     "enable_performance_monitoring": true,
     "enable_data_validation": true
   },
@@ -31,16 +31,26 @@
   "crawling": {
     "encar": {
       "enabled": true,
-      "max_pages_per_model": 5,
-      "delay_between_requests": 2
+      "base_url": "http://www.encar.com",
+      "search_url": "http://www.encar.com/dc/dc_carsearchlist.do",
+      "delay": 2,
+      "timeout": 30,
+      "max_retries": 3,
+      "max_pages_per_model": 5
     },
     "recall": {
       "enabled": true,
+      "base_url": "https://www.car.go.kr",
+      "search_url": "https://www.car.go.kr/recall/recall_list.car",
+      "delay": 1,
+      "timeout": 30,
+      "max_retries": 3,
       "check_last_days": 30
     },
     "public_data": {
       "enabled": true,
-      "auto_download": false
+      "auto_download": false,
+      "file_path": "data/registration_stats.xlsx"
     }
   },
   "alerts": {
