--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,9 @@
-# 데이터베이스 설정
+# 데이터베이스 설정 (실제 MySQL 비밀번호로 변경 필요)
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=your_actual_password
+DB_PASSWORD=change_this_password
 DB_NAME=car_analysis_db
 
-# 크롤링 설정
-ENCAR_DELAY=2
-ENCAR_MAX_ITEMS=20
-ENCAR_BATCH_SIZE=5
-
-RECALL_DELAY=1
-RECALL_MAX_ITEMS=50
-
-PUBLIC_DATA_FILE_PATH=./data/cache/car_registration_data.xlsx
-
-# Streamlit 설정
-STREAMLIT_PORT=8501
-STREAMLIT_HOST=localhost
-
-# 로깅 레벨 (DEBUG, INFO, WARNING, ERROR, CRITICAL)
+# 기타 설정
 LOG_LEVEL=INFO
-LOG_TO_FILE=true
-LOG_MAX_SIZE_MB=10
-LOG_BACKUP_COUNT=5
-
-# 스케줄러 설정
-SCHEDULER_ENABLE=true
-SCHEDULER_INTERVAL_HOURS=24
-
-# 보안 설정
-SECRET_KEY=your-secret-key-here-change-this-in-production
-ENCRYPT_LOGS=false
