크롤링 데이터 추가(보완필요)

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,61 @@
-# 데이터베이스 설정 (실제 MySQL 비밀번호로 변경 필요)
+# [AUTO] 중고차 vs 신차 분석 시스템 환경설정
+# 이 파일을 .env로 저장하고 실제 값으로 수정하세요
+
+# === 데이터베이스 설정 (필수) ===
 DB_HOST=localhost
 DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=change_this_password
+DB_USER=pj1_user
+DB_PASSWORD=1234
 DB_NAME=car_analysis_db
 
-# 기타 설정
+# === 공공데이터포털 API 설정 (권장) ===
+# https://www.data.go.kr에서 API 키 발급 후 설정
+PUBLIC_DATA_API_KEY=발급받은_API_키를_여기에_입력
+
+# === 크롤링 설정 ===
+# 리콜 크롤러 설정
+RECALL_DELAY=2
+RECALL_MAX_ITEMS=50
+RECALL_MAX_PAGES=5
+
+# K카 크롤러 설정 (엔카 대안)
+KCAR_DELAY=3
+KCAR_MAX_ITEMS=20
+KCAR_MAX_PAGES=3
+
+# === 로깅 설정 ===
 LOG_LEVEL=INFO
+LOG_TO_FILE=true
+LOG_MAX_SIZE_MB=10
+LOG_BACKUP_COUNT=5
+
+# === Streamlit 설정 ===
+STREAMLIT_PAGE_TITLE=[AUTO] 중고차 vs 신차 가성비 분석 시스템
+STREAMLIT_PAGE_ICON=[AUTO]
+STREAMLIT_LAYOUT=wide
+STREAMLIT_HOST=localhost
+STREAMLIT_PORT=8501
+
+# === 보안 설정 ===
+SECRET_KEY=your-unique-secret-key-change-this-in-production
+
+# === 스케줄러 설정 ===
+SCHEDULER_ENABLE=true
+SCHEDULER_INTERVAL_HOURS=24
+
+# === 캐시 설정 ===
+CACHE_ENABLE=true
+CACHE_TTL=3600
+CACHE_MAX_SIZE=100
+
+# === 이메일 알림 설정 (선택사항) ===
+EMAIL_ENABLED=false
+EMAIL_SMTP_SERVER=smtp.gmail.com
+EMAIL_SMTP_PORT=587
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASSWORD=your_app_password
+EMAIL_RECIPIENTS=admin@yourcompany.com
+
+# === 개발 모드 설정 ===
+DEBUG_MODE=false
+TEST_MODE=false
